--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,14 +6,16 @@ akka {
     log-remote-lifecycle-events = off
     netty.tcp {
       hostname = "127.0.0.1"
+      hostname = ${?AKKA_HOSTNAME}
       port = 0
+      port = ${?AKKA_PORT}
     }
   }
 
   cluster {
     seed-nodes = [
-      "akka.tcp://ClusterSystem@127.0.0.1:2551",
-      "akka.tcp://ClusterSystem@127.0.0.1:2552"]
+      "akka.tcp://127.0.0.1:2551",
+      "akka.tcp://127.0.0.1:2552"]
 
     auto-down-unreachable-after = 10s
   }
