--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,26 +7,17 @@ akka {
     netty.tcp {
       hostname = "127.0.0.1"
       hostname = ${?AKKA_HOSTNAME}
-      port = 0
+      port = 2551
+      //port = 0
       port = ${?AKKA_PORT}
     }
   }
 
   cluster {
     seed-nodes = [
-      "akka.tcp://127.0.0.1:2551",
-      "akka.tcp://127.0.0.1:2552"]
+      "akka.tcp://frontend@127.0.0.1:2551",
+      "akka.tcp://frontend@127.0.0.1:2552"]
 
     auto-down-unreachable-after = 10s
   }
 }
-
-# Disable legacy metrics in akka-cluster.
-akka.cluster.metrics.enabled=off
-
-# Enable metrics extension in akka-cluster-metrics.
-akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
-
-# Sigar native library extract location during tests.
-# Note: use per-jvm-instance folder when running multiple jvm on one host.
-akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/native
