Add seed{1,2}.conf, Main.scala

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,17 +7,22 @@ akka {
     netty.tcp {
       hostname = "127.0.0.1"
       hostname = ${?AKKA_HOSTNAME}
-      port = 2551
-      //port = 0
+      port = 0
       port = ${?AKKA_PORT}
     }
   }
 
   cluster {
     seed-nodes = [
-      "akka.tcp://frontend@127.0.0.1:2551",
-      "akka.tcp://frontend@127.0.0.1:2552"]
+      "akka.tcp://seed@127.0.0.1:2551",
+      "akka.tcp://seed@127.0.0.1:2552"]
 
     auto-down-unreachable-after = 10s
   }
 }
+
+# Disable legacy metrics in akka-cluster.
+akka.cluster.metrics.enabled=off
+ 
+# Enable metrics extension in akka-cluster-metrics.
+akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
