Fixup actor-system name etc

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,15 +14,9 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://seed@127.0.0.1:2551",
-      "akka.tcp://seed@127.0.0.1:2552"]
+      "akka.tcp://cluster@127.0.0.1:2551",
+      "akka.tcp://cluster@127.0.0.1:2552"]
 
     auto-down-unreachable-after = 10s
   }
 }
-
-# Disable legacy metrics in akka-cluster.
-akka.cluster.metrics.enabled=off
- 
-# Enable metrics extension in akka-cluster-metrics.
-akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
