Add sharding and configure persistence

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,3 +20,6 @@ akka {
     auto-down-unreachable-after = 10s
   }
 }
+
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb-shared"
+akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
