--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -26,7 +26,7 @@ akka {
 }
 //akka.remote.log-sent-messages = on
 
-//akka.cluster.sharding.role = "buffer"
+akka.cluster.sharding.role = "buffer"
 //akka.persistence.journal.plugin = "akka.persistence.journal.leveldb-shared"
 //akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 //akka.persistence.journal.plugin = "bdb-journal"
