Setup kamon.metric.filters

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,3 +23,18 @@ akka {
 
 akka.persistence.journal.plugin ="akka.persistence.inmem.journal"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+
+kamon.metric.filters {
+  akka-actor {
+    includes = [ "cluster/user/**" ]
+    excludes = [ "cluster/system/**" ]
+  }
+
+  akka-dispatcher {
+    includes = [ "**" ]
+  }
+
+  akka-router {
+    includes = [ "**" ]
+  }
+}
