Switch dynamodb-local and aws remote

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,3 +38,7 @@ kamon.metric.filters {
     includes = [ "**" ]
   }
 }
+
+counter-cluster.counter.dynamodb {
+  endpoint = "http://localhost:8000"
+}
