--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,8 +14,9 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://cluster@127.0.0.1:2551"]//,
-      //"akka.tcp://cluster@127.0.0.1:2552"]
+      "akka.tcp://cluster@127.0.0.1:2551"
+      //,"akka.tcp://cluster@127.0.0.1:2552"
+    ]
 
     auto-down-unreachable-after = 10s
   }
