Parameterize initial delay etc.

--- a/src/main/resources/frontend.conf
+++ b/src/main/resources/frontend.conf
@@ -1,2 +1,7 @@
 include "application.conf"
 akka.cluster.roles = ["frontend"]
+counter-cluster.frontend {
+  initial-delay-millis = 1000
+  interval-millis = 20
+  num-of-keys = 1000
+}
