--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -41,6 +41,6 @@ kamon.metric.filters {
 }
 
 counter-cluster.counter.dynamodb {
-  //endpoint = "http://localhost:8000"
   endpoint = "http://dynamodb.ap-northeast-1.amazonaws.com"
+  //endpoint = "http://localhost:8000" // DynamoDB Local
 }
