--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,8 +22,9 @@ akka {
   }
 }
 
-akka.persistence.journal.plugin ="akka.persistence.inmem.journal"
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+akka.persistence.journal.leveldb.dir = target/journal_${?NODE_ID}
 
 kamon.metric.filters {
   akka-actor {
