Fixup dockerfile on apt-get

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:14.04
 MAINTAINER Ikuo Matsumura <makiczar@gmail.com>
 
+RUN apt-get update
 RUN apt-get install -y software-properties-common
 RUN add-apt-repository -y ppa:webupd8team/java
 RUN apt-get update
