--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,6 @@
 akka {
+  loglevel = "INFO"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
   }
