--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,12 @@
 akka {
   loglevel = "INFO"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
   }
+
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
