--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,7 @@ akka {
     netty.tcp {
       hostname = "127.0.0.1"
       hostname = ${?AKKA_HOSTNAME}
+      bind-hostname = "0.0.0.0"
       port = 0
       port = ${?AKKA_PORT}
     }
