Parameterize datadog hostname

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -46,6 +46,8 @@ kamon.metric.filters {
   }
 }
 
+kamon.datadog.hostname = ${?DATADOG_HOSTNAME}
+
 counter-cluster.counter.dynamodb {
   endpoint = "http://dynamodb.ap-northeast-1.amazonaws.com"
   //endpoint = "http://localhost:8000" // DynamoDB Local
