--- a/src/main/resources/frontend.conf
+++ b/src/main/resources/frontend.conf
@@ -4,4 +4,6 @@ counter-cluster.frontend {
   initial-delay-millis = 10000
   interval-millis = 20
   num-of-keys = 1000
+  num-of-actors = 1
+  num-of-actors = ${?NUM_OF_ACTORS}
 }
