--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -52,3 +52,9 @@ counter-cluster.counter.dynamodb {
   endpoint = "http://dynamodb.ap-northeast-1.amazonaws.com"
   //endpoint = "http://localhost:8000" // DynamoDB Local
 }
+counter-cluster.counter {
+  num-of-shards = 60
+  num-of-shards = ${?NUM_OF_SHARDS}
+  entries-per-shard = 4
+  entries-per-shard = ${?ENTRIES_PER_SHARD}
+}
