Refactoring on dynamodb.endpoint conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -48,11 +48,11 @@ kamon.metric.filters {
 
 kamon.datadog.hostname = ${?DATADOG_HOSTNAME}
 
-counter-cluster.counter.dynamodb {
-  endpoint = "http://dynamodb.ap-northeast-1.amazonaws.com"
-  //endpoint = "http://localhost:8000" // DynamoDB Local
-}
 counter-cluster.counter {
+  dynamodb {
+    endpoint = "http://dynamodb.ap-northeast-1.amazonaws.com"
+    //endpoint = "http://localhost:8000" // DynamoDB Local
+  }
   num-of-shards = 60
   num-of-shards = ${?NUM_OF_SHARDS}
   entries-per-shard = 4
