--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -57,4 +57,6 @@ counter-cluster.counter {
   num-of-shards = ${?NUM_OF_SHARDS}
   entries-per-shard = 4
   entries-per-shard = ${?ENTRIES_PER_SHARD}
+  save-buckets-interval = 10 seconds
+  save-buckets-interval = ${?SAVE_BUCKETS_INTERVAL}
 }
