Add sharding options

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,13 @@ akka {
     ]
 
     auto-down-unreachable-after = 10s
+
+    sharding {
+      rebalance-threshold = 3
+      rebalance-threshold = ${?REBALANCE_THRESHOLD}
+      max-simultaneous-rebalance = 3
+      max-simultaneous-rebalance = ${?MAX_SIMULTANEOUS-REBALANCE}
+    }
   }
 }
 
