Add env var INTERVAL_MILLIS

--- a/src/main/resources/frontend.conf
+++ b/src/main/resources/frontend.conf
@@ -3,6 +3,7 @@ akka.cluster.roles = ["frontend"]
 counter-cluster.frontend {
   initial-delay-millis = 10000
   interval-millis = 20
+  interval-millis = ${?INTERVAL_MILLIS}
   num-of-keys = 1000
   num-of-keys = ${?NUM_OF_KEYS}
   num-of-actors = 1
